fix slider gap

--- a/src/output.css
+++ b/src/output.css
@@ -1318,11 +1318,15 @@ a{
 
 @media (min-width: 481px) and (max-width: 992px){
   .slider-nav .slick-track{
-    gap: 6px;
+    display: flex;
+    gap: 6px !important;
   }
+}
 
-  .slider-nav .slick-track .slick-slide{
-    width: 98% !important;
+@media (min-width: 1200px){
+  .slider-nav .slick-track{
+    display: flex;
+    gap: 10px !important;
   }
 }
 
@@ -1399,15 +1403,6 @@ a{
     display: none;
   }
 
-  .tablet\:w-full{
-    width: 100%;
-  }
-
-  .tablet\:w-max{
-    width: -moz-max-content;
-    width: max-content;
-  }
-
   .tablet\:w-\[100\%\]{
     width: 100%;
   }
@@ -1418,10 +1413,6 @@ a{
 
   .tablet\:max-w-\[820px\]{
     max-width: 820px;
-  }
-
-  .tablet\:justify-center{
-    justify-content: center;
   }
 
   .tablet\:justify-between{
@@ -1441,9 +1432,9 @@ a{
     padding-right: 16px;
   }
 
-  .tablet\:px-\[10px\]{
-    padding-left: 10px;
-    padding-right: 10px;
+  .tablet\:px-\[24px\]{
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
